--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
   width: 100%;
   height: 100vh;
   background: url(images/amatya_nahar_desktop.png);
-  background-size: cover;
+  background-size: 94%;
+  background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
 }
@@ -30,10 +31,10 @@ body {
 }
 
 nav {
-  /* display: flex;
+  display: flex;
   align-items: center;
   justify-content: space-evenly;
-  flex-wrap: wrap; */
+  flex-wrap: wrap;
   position: fixed;
   top: 0;
   width: 100%;
@@ -44,11 +45,17 @@ nav {
   text-align: center;
 }
 
-/* .logo {
-  width: 50px;
-  border-radius: 50%;
+.logo {
+  height: 55px;
   margin: 5px;
-} */
+  cursor: pointer;
+}
+
+.logo:hover {
+  background: #080808;
+  transform: translateY(-5px);
+  border-radius: 40%;
+}
 
 .highlight {
   color: #ff004f;
@@ -56,16 +63,6 @@ nav {
   font-size: 50px;
   font-weight: 600;
 }
-
-/* .name {
-  font-size: 40px;
-
-  margin-top: 10px;
-} */
-
-/* nav ul {
-  margin-left: 18%;
-} */
 
 nav ul li {
   display: inline-block;
@@ -438,23 +435,41 @@ nav .mobile-view {
   html {
     min-width: fit-content;
   }
+
   .container {
-    padding: 8px 8%;
+    padding: 5px 5%;
     min-width: fit-content;
     min-height: fit-content;
   }
+
   #header {
     background-image: url(images/amatya_nahar_mobile.png);
     background-attachment: scroll;
     background-size: contain;
     height: fit-content;
   }
+
   .header-text {
     margin-top: 95%;
     font-size: 14px;
   }
+
   .header-text h1 {
     font-size: 20px;
+  }
+
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    min-height: fit-content;
+    background-color: #0561c4;
+  }
+
+  .nav-mobile {
+    min-height: fit-content;
   }
 
   nav .mobile-view {
@@ -480,10 +495,23 @@ nav .mobile-view {
     margin: 25px;
   }
 
-  nav ul .fa-solid {
+  #open {
     position: absolute;
-    top: 25px;
-    left: 25px;
+    top: 15px;
+    left: 90%;
+    cursor: pointer;
+  }
+
+  #close {
+    position: absolute;
+    top: 15px;
+    left: 155px;
+    cursor: pointer;
+  }
+
+  #logo {
+    display: flex;
+    margin-right: 80%;
     cursor: pointer;
   }
 
@@ -522,3 +550,5 @@ nav .mobile-view {
     font-size: 24px;
   }
 }
+
+/* ---------------------CSS for Typing effect----------------------- */
