customized some css

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 nav {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
   position: fixed;
   top: 0;
@@ -45,15 +45,17 @@ nav {
   text-align: center;
 }
 
-.logo {
-  height: 55px;
-  margin: 5px;
+#logo {
+  margin: 12px 55px 4px 0px;
   cursor: pointer;
 }
 
+.logo {
+  height: 50px;
+}
+
 .logo:hover {
-  background: #080808;
-  transform: translateY(-5px);
+  transform: translateY(-6px);
   border-radius: 40%;
 }
 
@@ -502,11 +504,21 @@ nav .mobile-view {
     cursor: pointer;
   }
 
+  #open:hover {
+    transform: translateY(-6px);
+    border-radius: 40%;
+  }
+
   #close {
     position: absolute;
     top: 15px;
     left: 155px;
     cursor: pointer;
+  }
+
+  #close:hover {
+    transform: translateY(-6px);
+    border-radius: 40%;
   }
 
   #logo {
