--- a/style.css
+++ b/style.css
@@ -18,18 +18,21 @@ body {
   width: 100%;
   height: 100vh;
   background: url(images/amatya_nahar_desktop.png);
-  background-size: 94%;
+  background-size: 93%;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
 }
 
 .container {
-  padding: 8px 8%;
+  padding: 56px 10%;
   min-width: fit-content;
   min-height: fit-content;
 }
 
+#sidemenu {
+  margin-right: 100px;
+}
 nav {
   display: flex;
   align-items: center;
@@ -106,7 +109,7 @@ nav ul li a:hover::after {
 /* -------------------------about---------------------------------- */
 
 #about {
-  padding: 80px 0;
+  padding: 40px 0;
   color: #ababab;
 }
 
@@ -186,7 +189,7 @@ nav ul li a:hover::after {
 /* -----------------------------services----------------------------------- */
 
 #services {
-  padding: 30px;
+  padding: 40px 0;
 }
 
 .services-list {
@@ -194,7 +197,7 @@ nav ul li a:hover::after {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 40px;
   margin-top: 50px;
-  min-height: 400px;
+  min-height: 350px;
 }
 
 .services-list div {
@@ -202,7 +205,7 @@ nav ul li a:hover::after {
   padding: 40px;
   font-size: 13px;
   font-weight: 300;
-  border-radius: 10px;
+  border-radius: 20px;
   transition: background 0.5s, transform 0.5s;
 }
 
@@ -232,7 +235,7 @@ nav ul li a:hover::after {
 
 /* ---------------portfolio------------------------- */
 
-#portfolio {
+/* #portfolio {
   padding: 50px 0;
 }
 
@@ -315,9 +318,28 @@ nav ul li a:hover::after {
 .btn:hover {
   background: #ff004f;
   transition: transform 0.5s;
-}
+} */
 
 /* ---------------------------contact---------------------------------------- */
+#contact {
+  padding-top: 10px;
+}
+
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #ff004f;
+  padding: 14px 50px;
+  border-radius: 60px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.btn:hover {
+  background: #ff004f;
+  transition: transform 0.5s;
+}
 
 .contact-left {
   flex-basis: 35%;
@@ -409,10 +431,10 @@ form .btn2 {
 .copyright {
   width: 100%;
   text-align: center;
-  padding: 25px 0;
+  padding: 10px 0;
   background: #262626;
   font-weight: 300;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .copyright i {
@@ -435,7 +457,7 @@ nav .mobile-view {
   }
 
   .container {
-    padding: 5px 5%;
+    padding: 2px 4%;
     min-width: fit-content;
     min-height: fit-content;
   }
@@ -448,12 +470,9 @@ nav .mobile-view {
   }
 
   .header-text {
-    margin-top: 95%;
-    font-size: 14px;
-  }
-
-  .header-text h1 {
-    font-size: 20px;
+    margin-top: 55%;
+    font-size: 24px;
+    min-width: fit-content;
   }
 
   nav {
@@ -563,6 +582,10 @@ nav .mobile-view {
     font-family: cursive;
     font-size: 20px;
     font-weight: 600;
+  }
+
+  #sidemenu {
+    margin-right: 0px;
   }
 }
 
