--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
   color: #fff;
 }
 
+.hi {
+  font-size: 55px;
+  color: #0561c4;
+}
+
 #header {
   width: 100%;
   height: 100vh;
@@ -62,7 +67,7 @@ nav {
   color: #ff004f;
   font-family: cursive;
   font-size: 50px;
-  font-weight: 600;
+  font-weight: 800;
 }
 
 nav ul li {
@@ -470,8 +475,8 @@ nav .mobile-view {
   }
 
   .header-text {
-    margin-top: 90%;
-    font-size: 22px;
+    margin-top: 100%;
+    font-size: 24px;
     min-width: fit-content;
   }
 
@@ -580,8 +585,6 @@ nav .mobile-view {
   .highlight {
     color: #ff004f;
     font-family: cursive;
-    font-size: 20px;
-    font-weight: 600;
   }
 
   #sidemenu {
