updated small font-size for mobile view

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .hi {
-  font-size: 55px;
+  font-size: 52px;
   color: #0561c4;
 }
 
@@ -65,8 +65,8 @@ nav {
 
 .highlight {
   color: #ff004f;
-  font-family: cursive;
-  font-size: 50px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 55px;
   font-weight: 800;
 }
 
@@ -111,6 +111,10 @@ nav ul li a:hover::after {
   color: #ff004f;
 }
 
+.designation {
+  text-decoration: underline;
+  font-weight: 600;
+}
 /* -------------------------about---------------------------------- */
 
 #about {
@@ -468,12 +472,12 @@ nav .mobile-view {
   }
 
   .hi {
-    font-size: 20px;
+    font-size: 26px;
     color: #0561c4;
   }
 
   .highlight {
-    font-size: 22px;
+    font-size: 28px;
   }
 
   #header {
