--- a/style.css
+++ b/style.css
@@ -615,13 +615,17 @@ nav .mobile-view {
     margin-right: 0px;
   }
 
+  #header {
+    padding-top: 0px;
+  }
+
   #contact,
   #services {
-    padding-top: 100px;
+    padding-top: 70px;
   }
 
   #about img {
-    margin-top: 100px;
+    margin-top: 70px;
   }
 }
 
