--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav {
   top: 0;
   width: 100%;
   background-color: #0561c4;
+  z-index: 1000;
 }
 
 #logo {
@@ -166,6 +167,7 @@ nav ul li a:hover::after {
   cursor: pointer;
   position: relative;
   color: #fff;
+  z-index: 1;
 }
 
 .tab-links::after {
@@ -462,6 +464,92 @@ form .btn2 {
   display: block;
 }
 
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#spinner {
+  width: 60px;
+  height: 60px;
+  border: 10px solid #0561c4;
+  border-top: 10px solid #ff004f;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-bottom: 16px;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+#overlay-text {
+  color: #fff;
+  font-size: 24px;
+  font-weight: normal;
+  transition: all 0.2s ease-in-out;
+}
+
+#dots {
+  display: inline-block;
+  width: 1em;
+  text-align: left;
+  animation: dots 1s steps(3, end) infinite;
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
+}
+
+/* For Safari and cross-browser support */
+#dots::after {
+  content: "";
+  animation: dotsText 1s steps(4, end) infinite;
+}
+
+@keyframes dotsText {
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  75% {
+    content: "...";
+  }
+  100% {
+    content: "";
+  }
+}
+
 /* ---------------------------------CSS for small screens------------------------------------- */
 nav .mobile-view {
   display: none;
@@ -487,10 +575,11 @@ nav .mobile-view {
   }
 
   #header {
-    background-image: url(images/amatya_nahar_mobile.png);
     background-attachment: scroll;
     background-size: contain;
+    background-repeat: no-repeat;
     height: fit-content;
+    transition: background-image 0s ease-in-out;
   }
 
   .header-text {
