--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
   color: #0561c4;
 }
 
+.noscroll {
+  overflow: hidden;
+}
+
 #header {
   width: 100%;
   height: 100vh;
@@ -624,7 +628,7 @@ nav .mobile-view {
     top: 0;
     right: -200px;
     width: 200px;
-    height: 100vh;
+    height: 100%;
     padding-top: 50px;
     z-index: 2;
     transition: right 0.5s;
