--- a/style.css
+++ b/style.css
@@ -641,26 +641,24 @@ nav .mobile-view {
 
   #open {
     position: absolute;
-    top: 15px;
-    left: 90%;
+    top: 20px;
+    left: 85%;
     cursor: pointer;
   }
 
   #open:hover {
-    transform: translateY(-6px);
-    border-radius: 40%;
+    color: #ff004f;
   }
 
   #close {
     position: absolute;
-    top: 15px;
-    left: 155px;
+    top: 20px;
+    left: 140px;
     cursor: pointer;
   }
 
   #close:hover {
-    transform: translateY(-6px);
-    border-radius: 40%;
+    color: #0561c4;
   }
 
   #logo {
