commented margin css for button -download resume in order to check if the issue where in mobile view is happenning because of this changes

--- a/style.css
+++ b/style.css
@@ -447,13 +447,13 @@ a[href^="mailto:"] {
   background: #ff004f;
 }
 
-.pdf {
+/* .pdf {
   margin-right: 90px;
 }
 
 .docx {
   margin-right: 85px;
-}
+} */
 
 .contact-right form {
   width: 100%;
