added css to align contact section properly. Also added css to style header and footer section.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
   overflow: hidden;
 }
 
+.nav-desktop {
+  border: 5px solid #69bf3a;
+}
+
 #header {
   width: 100%;
   height: 100vh;
@@ -354,11 +358,17 @@ nav ul li a:hover {
 /* ---------------------------contact---------------------------------------- */
 #contact {
   padding-top: 10px;
+  padding-bottom: 0px;
 }
+
+/* .contact-details {
+  margin-top: 20px;
+  margin-bottom: 10px;
+} */
 
 .btn {
   display: block;
-  margin: 50px auto;
+  /* margin: 50px auto; */
   max-width: fit-content;
   border: 2px solid #080808;
   padding: 14px 50px;
@@ -378,7 +388,7 @@ nav ul li a:hover {
 }
 
 .contact-right {
-  flex-basis: 60%;
+  flex-basis: 55%;
 }
 
 .contact-left p {
@@ -434,6 +444,7 @@ a[href^="mailto:"] {
   text-decoration: none;
   color: #fff;
   white-space: nowrap;
+  margin-bottom: 5px;
 }
 
 .resume-btn:hover {
@@ -483,9 +494,10 @@ form .btn2 {
   width: 100%;
   text-align: center;
   padding: 10px 0;
-  background: #262626;
-  font-weight: 300;
-  margin-top: 10px;
+  background: #2f2f2f;
+  font-weight: 500;
+  border: 5px solid #69bf3a;
+  /* margin-top: 10px; */
 }
 
 .copyright i {
