--- a/style.css
+++ b/style.css
@@ -128,8 +128,22 @@ nav ul li a:hover {
 
 .designation {
   text-decoration: underline;
+  text-decoration-color: #69bf3a;
+  text-decoration-thickness: 4px;
+  color: #fff;
   font-weight: 500;
   font-size: 34px;
+  white-space: nowrap;
+}
+
+.skills {
+  font-size: 32px;
+  border: 5px solid #ff004f;
+  border-radius: 10px;
+  box-shadow: 7px 7px 15px #0561c4;
+  padding: 20px;
+  background-color: #2f2f2f;
+  max-width: fit-content;
 }
 
 /* -------------------------about---------------------------------- */
@@ -645,12 +659,22 @@ nav .mobile-view {
 
   .designation {
     text-decoration: underline;
+    text-decoration-color: #69bf3a;
+    text-decoration-thickness: 4px;
+    color: #fff;
     font-weight: 300;
     font-size: 22px;
+    white-space: nowrap;
   }
 
   .skills {
-    font-size: 18px;
+    font-size: 20px;
+    border: 2px solid #ff004f;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px #0561c4;
+    padding: 20px;
+    background-color: #2f2f2f;
+    max-width: fit-content;
   }
 
   nav {
